fixed emojis jumping by colorizing it

--- a/client/styles/emojis.css
+++ b/client/styles/emojis.css
@@ -33,7 +33,7 @@
 }
 
 .emoji-colored {
-  border: none;
+  border: 2px solid #EEFF54;
   background-color: #EEFF54;
 }
 
